# eliza

./: .env_dev  .gitignore  README.md  app.py  docker-compose.yaml  gptmock.py  kopia_notatnika_petals_getting_started_with_bloom_176b_gpu_colab.ipynb  local.sh  plan.txt  pyproject.toml
backend/: .env_dev  Dockerfile  app.py  gptmock.py  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/gpt/: chat.py
backend/app/models/: prompt_template.py
backend/app/schemas/: ai.py
backend/app/views/: ai.py
backend/fruits_colors/: __init__.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  ChatBox.js
notebooks/: Untitled-1.py
