[tool.poetry]
name = "fruits-colors"
version = "0.1.0"
description = ""
authors = ["K"]
readme = "README.md"
packages = [{include = "fruits_colors"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
openai = "^0.25.0"
langchain = "^0.0.35"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
